# django-q-registry

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  RELEASING.md  noxfile.py  pyproject.toml
.copier/: package.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py
src/django_q_registry/: __init__.py  apps.py  conf.py  models.py  registry.py
src/django_q_registry/management/commands/: setup_periodic_tasks.py
src/django_q_registry/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_conf.py  test_models.py  test_registry.py  test_setup_periodic_tasks.py  test_task.py  test_version.py
